# exon-duckdb

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.manylinux  Dockerfile.manylinux2014  Dockerfile.python  Dockerfile.ubuntu1604  Dockerfile.ubuntulatest  Makefile  README.md  cz.json  docker-compose.yml  environment.yml  public-functions.yaml
.github/actions/build_docker_image/: action.yml
.github/actions/build_python_whl/: action.yml
.github/workflows/: DevDocker.yml  DevPython.yml  Docker.yml  ExtensionTemplate.yml  Linux.yml  MacOS.yaml  MacOS.yml  MainDistributionPipeline.yml  NodeJS.yml  PrdDocker.yml  PrdPython.yml  Python.yml  R.yml  TestInsalls.yml  TestLinux.yml  TestPythonInstall.yml  TestRInstall.yml  Windows.yml
dockerfiles/: Dockerfile  Dockerfile.manylinux2014
exon-duckdb/: Cargo.toml  build.rs
exon-duckdb/src/: arrow_reader.rs  bam_query_reader.rs  vcf_query_reader.rs
exon/include/: exon_duckdb.hpp  exon_extension.hpp  rust.hpp
exon/include/exon/arrow_table_function/: module.hpp
exon/include/exon/bam_query_function/: module.hpp
exon/include/exon/bcf_query_function/: module.hpp
exon/include/exon/core/: module.hpp
exon/include/exon/fastq_functions/: module.hpp
exon/include/exon/gff_functions/: module.hpp
exon/include/exon/sam_functions/: module.hpp
exon/include/exon/sequence_functions/: module.hpp
exon/include/exon/vcf_query_function/: module.hpp
exon/src/: CMakeLists.txt  exon_extension.cpp
exon/src/exon/: CMakeLists.txt
exon/src/exon/alignment_functions/: CMakeLists.txt  module.cpp
exon/src/exon/arrow_table_function/: module.cpp
exon/src/exon/bam_query_function/: module.cpp
exon/src/exon/bcf_query_function/: CMakeLists.txt  module.cpp
exon/src/exon/core/: module.cpp
exon/src/exon/fastq_functions/: CMakeLists.txt  module.cpp
exon/src/exon/gff_functions/: module.cpp
exon/src/exon/sam_functions/: module.cpp
exon/src/exon/sequence_functions/: module.cpp
exon/src/exon/vcf_query_function/: module.cpp
rust/: Cargo.toml  build.rs
rust/src/: arrow_reader.rs  bam_query_reader.rs  bcf_query_reader.rs  lib.rs  vcf_query_reader.rs
src/: alignment_functions.cpp  arrow_table_function.cpp  bam_io.cpp  bcf_io.cpp  bed_io.cpp  check_license.cpp  exondb_acknowledgement_table.cpp  exondb_extension.cpp  exondb_functions.cpp  fasta_io.cpp  fastq_io.cpp  genbank_io.cpp  gff_io.cpp  gtf_io.cpp  hmm_io.cpp  sam_cigar_parse.cpp  sam_io.cpp  sequence_functions.cpp  vcf_io.cpp  vcf_io_types.cpp  wt_arrow_table_function.cpp  wtt01_acknowledgement_table.cpp  wtt01_extension.cpp  wtt01_functions.cpp
src/include/: alignment_functions.hpp  arrow_table_function.hpp  bam_io.hpp  bcf_io.hpp  bed_io.hpp  check_license.hpp  exondb_extension.hpp  exondb_functions.hpp  fasta_io.hpp  fastq_io.hpp  genbank_io.hpp  gff_io.hpp  gtf_io.hpp  hmm_io.hpp  rust.hpp  sam_io.hpp  sequence_functions.hpp  vcf_io.hpp  vcf_io_types.hpp  wt_arrow_table_function.hpp  wtt01_extension.hpp  wtt01_functions.hpp  wtt01_rust.hpp
test/nodejs/: wtt01_test.js
test/python/: wtt01_test.py
test/sql/: wtt01.test
test/sql/exondb-align/: test_align.test
test/sql/exondb-release-with-deb-info/: test.fastq.zst  test.gff.zstd  test_acknowledgements_function.test  test_bam_record_scan.test  test_bed_io.test  test_fasta_copy.test  test_fasta_scan.test  test_fastq_copy.test  test_fastq_scan.test  test_genbank_scan.test  test_gff_copy.test  test_gff_scan.test  test_gtf_scan.test  test_hmm_scan.test  test_mzml_scan.test  test_sam_flags.test  test_sam_record_scan.test  test_scalar_functions.test  test_vcf_record_scan.test
test/sql/exondb-release-with-deb-info/bed/: hg38.head.bed
test/sql/exondb-release-with-deb-info/gb/: Alouatta_caraya_NC_021938.1.gb  Alouatta_caraya_NC_021938.1.gb.zst  BGC0002747.gbk  BGC0002749.gbk
test/sql/exondb-release-with-deb-info/sam/: little.sam
test/sql/exondb-release-with-deb-info/vcf/: vcf_meta_meta.vcf
test/sql/wtt-01-align/: test_align.test
test/sql/wtt-01-release-with-deb-info/: test.gff.gzip  test.mixed-desc.fasta  test_acknowledgements_function.test  test_bam_record_scan.test  test_bed_io.test  test_fasta_copy.test  test_fasta_scan.test  test_fastq_copy.test  test_fastq_scan.test  test_genbank_scan.test  test_gff_copy.test  test_gff_scan.test  test_hmm_scan.test  test_sam_flags.test  test_sam_header_scan.test  test_sam_record_scan.test  test_scalar_functions.test  test_vcf_record_scan.test
test/sql/wtt-01-release-with-deb-info/bam/: example1.bam
test/sql/wtt-01-release-with-deb-info/gb/: BGC0002747.gbk
test/sql/wtt-01-release-with-deb-info/gff/: raw-test.gff
test/sql/wtt-01-release-with-deb-info/vcf/: 1000-genomes-example.vcf  chrY.vcf  test.bcf  test.vcf
test/sql/wtt-01-release/license_check_404/: test_license_check_404.test
test/sql/wtt-01-release/license_check_500/: test_license_check_500.test
test/sql/wtt-01-release/license_check_active/: test_license_check_active.test
wtt01_javascript/: index.js  package-lock.json  package.json
wtt01_javascript/tests/: index.test.js
wtt01_javascript/wtt01/: index.js
wtt01_python/: LICENSE.txt  Makefile  README.md  pyproject.toml
wtt01_python/exondb/: __about__.py  __init__.py  _env.py  cli.py  main.py
wtt01_python/tests/: test_load.py
wtt01_python/wtt01/: __about__.py  __init__.py  cli.py  main.py
wtt01_rust/: CMakeLists.txt  Cargo.toml  build.rs
wtt01_rust/src/: arrow_reader.rs  lib.rs  read_bam.rs  read_bam_record.rs  read_bcf.rs  read_bed.rs  read_fasta.rs  read_fastq.rs  read_genbank.rs  read_gff.rs  read_gtf.rs  read_sam_header.rs  read_sam_record.rs  read_vcf.rs  sam_functions.rs  vcf_reader.rs  write_fasta.rs  write_fastq.rs  write_gff.rs
wtt01_rust/src/vcf_reader/: wt_float_key.rs  wt_float_list_key.rs  wt_genotypes.rs  wt_infos.rs  wt_int_key.rs  wt_int_list_key.rs  wt_string_key.rs  wt_string_list_key.rs
wtt01r/: DESCRIPTION  NAMESPACE  dependencies.R
wtt01r/R/: getConnection.R  get_connection.R
wtt01r/man/: wtt01r.Rd
wtt01r/vignettes/: wtt01r.Rmd
(+2 files in other folders)
