[package]
build = "build.rs"
edition = "2021"
name = "rust"
version = "1.0.0"

[features]
all = []
statically_linked = []

[lib]
crate-type = ["staticlib"]
name = "rust"

[dependencies]
arrow = {version = "42", default-features = false, features = ["ffi"]}
datafusion = {version = "27.0.0", features = ["default"]}
exon = {version = "0.2.4", features = ["all"]}
noodles = {version = "0.38.0", features = ["sam", "fasta", "fastq", "gff"]}
tokio = {version = "1", features = ["rt-multi-thread"]}

[build-dependencies]
cbindgen = "0.24.5"
