[package]
build = "build.rs"
edition = "2021"
name = "wtt01_rust"
version = "1.0.0"

[features]
statically_linked = []

[lib]
crate-type = ["staticlib"]
name = "wtt01_rust"

[dependencies]
arrow = {version = "35", default-features = false, features = ["prettyprint", "ffi"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.gb-io]
version = "0.7.1"

[dependencies.noodles]
features = ["fasta", "fastq", "gff", "core", "sam", "bam", "vcf", "bed", "bgzf", "bcf"]
version = "0.34.0"

[dependencies.flate2]
version = "1.0.25"

[dependencies.zstd]
version = "0.12"

[dependencies.bytes]
version = "1.0.1"

[build-dependencies]
cbindgen = "0.24.3"

[dependencies.duckdb]
branch = "make-func-public"
features = ["vtab", "bundled", "vtab-arrow"]
git = "https://github.com/tshauck/duckdb-rs"
